# nodaysidle-batchrenamepro

./: AGENT.md  ARD.md  CLAUDE.md  PRD.md  README.md  TASKS.md  TRD.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  conversion_service.rs  db.rs  file_service.rs  lib.rs  main.rs  metadata_service.rs  pipeline.rs  preview_service.rs  types.rs
src-tauri/src/migrations/: 001_initial.sql
src/components/: ActionFooter.tsx  ConvertTab.tsx  DropZone.tsx  FileCard.tsx  FileList.tsx  HistoryPanel.tsx  MetadataTab.tsx  Navbar.tsx  RenameTab.tsx  SettingsModal.tsx  TransformationPanel.tsx
src/hooks/: useRenamePreview.ts  useTauriEvent.ts
src/lib/: commands.ts  events.ts
src/state/: AppStateContext.tsx  reducer.ts
